# html22text

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ACTIONS_SETUP.md  INSTALL.md  PLAN.md  README.md  TODO.md  install.sh  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt  sample1.html  setup.py  workflows-ci.yml  workflows-release.yml
.github/workflows/: ci.yml  release.yml
html22text/: __init__.py  __main__.py  html22text.py
scripts/: build.sh  dev-setup.sh  release.sh  test.sh
src/html22text/: __init__.py  __main__.py  html22text.py
tests/: test_cli.py  test_edge_cases.py  test_html22text.py  test_integration.py  test_version.py
